- Fixed issue where jumping on Bouncebloom once would make them not drop an item
- Fixed weird gore spawning offset when jumping on Bounceblooms