@@ -12,23 +12,34 @@ class AcornGlobal : GlobalItem
 {
     public override bool AppliesToEntity(Item entity, bool lateInstantiation) => entity.type == ItemID.Acorn;
 
+    public override void HoldItem(Item item, Player player) 
+        => item.createTile = CanPlaceAt(Main.MouseWorld.ToTileCoordinates(), player) ? ModContent.TileType<LushSapling>() : TileID.Saplings;
+
     public override bool? UseItem(Item item, Player player)
     {
-        Point p = Main.MouseWorld.ToTileCoordinates();
-        Tile tile = Main.tile[p.X, p.Y + 1];
-        bool inRange = player.IsInTileInteractionRange(p.X, p.Y + 1, TileReachCheckSettings.Simple);
-
-        if (inRange && tile.HasTile && tile.TileType == ModContent.TileType<VerdantGrassLeaves>() && Main.tile[p.X, p.Y].TileType != ModContent.TileType<LushSapling>())
+        if (item.createTile == ModContent.TileType<LushSapling>())
         {
+            Point p = Main.MouseWorld.ToTileCoordinates();
+            Tile cur = Main.tile[p.X, p.Y];
             Tile top = Main.tile[p.X, p.Y - 1];
-            Tile bot = Main.tile[p.X, p.Y];
 
-            if ((!top.HasTile || Main.tileCut[top.TileType]) && (!bot.HasTile || Main.tileCut[bot.TileType]))
+            if ((!cur.HasTile || Main.tileCut[cur.TileType]) && (!top.HasTile || Main.tileCut[top.TileType]))
             {
                 WorldGen.PlaceTile(p.X, p.Y, ModContent.TileType<LushSapling>());
                 return true;
             }
         }
         return null;
+    }
+
+    /// <summary>
+    /// Whether a sapling can be planted here. Checks the tile below the given coordinates.
+    /// </summary>
+    public static bool CanPlaceAt(Point pos, Player player)
+    {
+        Tile tile = Main.tile[pos.X, pos.Y + 1];
+        bool inRange = player.IsInTileInteractionRange(pos.X, pos.Y + 1, TileReachCheckSettings.Simple);
+
+        return inRange && tile.HasTile && VerdantGrassLeaves.VerdantGrassList().Contains(tile.TileType) && Main.tile[pos].TileType != ModContent.TileType<LushSapling>();
     }
 }
