@@ -71,3 +71,6 @@ BackslateTile.MapEntry: Backslate
 ThornTile.MapEntry: Thorns
 LushPlanks.MapEntry: Lush Planks
 MysteriaFluff.MapEntry: Mysteria Fluff
+LushGrass.MapEntry: Lush Grass
+LightbulbLeaves.MapEntry: Lightbulb Leaves
+TrimmedOvergrownBricks.MapEntry: Trimmed Overgrown Bricks
