@@ -23,7 +23,12 @@ VineHookLines: {
 }
 
 Condition.InVerdant: In the Verdant biome
-RecipeCondition.AfterApotheosisDownedPlantera: After getting the Apotheosis's Plantera gift
+
+RecipeCondition: {
+	AfterApotheosisDownedPlantera: After getting the Apotheosis's Plantera gift
+	HasShears: While carrying Shears [i:{0}]
+}
+
 "Keybinds.Verdant:SquidForm.DisplayName": Verdant: Squid Form
 
 GameTips: {
