@@ -1,6 +1,6 @@
 displayName = Verdant
 author = GabeHasWon
-version = 1.2.1.3
+version = 1.2.1.5
 dllReferences = StructureHelper, NetEasy_v0.1.8, NetSerializer
 hideCode = false
 hideResources = false
